--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <style>
+    html,body
+    {
+        overflow-x: hidden;
+    }
     .pace {
       -webkit-pointer-events: none;
       pointer-events: none;
@@ -94,9 +98,8 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/infinite-slider.css">
     <link rel="stylesheet" href="assets/css/style_boxes.css">
+    <link rel="stylesheet" href="assets/css/animate.css">
 
-    <link rel="stylesheet" href="assets/third_party/css3_animateIt/css/animations.css">
-    <link rel="stylesheet" href="assets/third_party/css3_animateIt/css/animations-ie-fix.css">
     <link rel="icon" href="assets/images/suvc.png" type="image/gif" sizes="16x16">
 
 </head>
@@ -156,7 +159,7 @@
 
     <header id='site-header'  class="site-header valign-center">
       <div class="container-fluid">
-        <div class="row animatedParent">
+        <div class="row">
             <div id="slider" class="carousel slide" data-ride="carousel" data-interval="3000" style="position: static; display:block;">
               <ol class="carousel-indicators">
                 <li data-target="#slider" data-slide-to="0" class="active"></li>
@@ -183,8 +186,8 @@
                 <span class="sr-only">Next</span>
               </a>
             </div> <!-- carousel end -->
-            <div style="position:absolute; left:50%; top:40%; color:white;" class="animated growIn">
-              <div id="intro_heading_box" style="position:relative; left:-50%; background-color:rgba(35,52,85, 0.89); padding-left:20px; padding-right:20px; padding-top:10px; padding-bottom:20px; font-size:20px">
+            <div style="position:absolute; left:50%; top:40%; color:white;" >
+              <div id="intro_heading_box" class="wow zoomIn" style="position:relative; left:-50%; background-color:rgba(35,52,85, 0.89); padding-left:20px; padding-right:20px; padding-top:10px; padding-bottom:20px; font-size:20px">
               <h2>SUVC - 2021</h2>
               <h1>SAUR URJA VEHICLE CHALLENGE</h1>
               <h2><i>ACCELERATING THE FUTURE</i></h2>
@@ -196,18 +199,18 @@
         </div> <!-- row end -->
       </div> <!-- container fluid end -->
     </header>
-    <section id="about" class="section about animatedParent">
+    <section id="about" class="section about">
         <div class="container-fluid">
           <div class="row">
             <div class="col-sm-6">
-                <h1 class="section-title">About Us</h1>
-                <p>SUVC IS A SOLAR ELECTRIC CAR COMPETITION ORGANISED BY REFRANGIBLE SOCIETY (RSTE),
+                <h1 class="section-title wow bounceInUp">About Us</h1>
+                <p class="wow bounceInLeft">SUVC IS A SOLAR ELECTRIC CAR COMPETITION ORGANISED BY REFRANGIBLE SOCIETY (RSTE),
                   THAT CHALLENGE ENGINEERING STUDENTS TO WORK ON ELECTRIC VEHICLES WITH UTILIZATION OF SUSTAINABLE ENERGY.
                   SUVC KNOWN FOR ITS USP -  MENTORING TEAMS ENTIRE YEAR WITH TECHNICAL AND NON TECHNICAL SUPPORT BY THE COLLABORATION OF
                    VARIOUS AUTOMOBILE AND RENEWABLE ENERGY RESEARCHERS.
                   </p>
             </div><!-- /.col-sm-6 -->
-            <div class="col-sm-6">
+            <div class="col-sm-6  wow fadeInLeft">
               <figure>
                   <img alt="" class="img-responsive" src="assets/images/backgrounds/about_us.JPG">
               </figure>
@@ -215,7 +218,7 @@
           </div> <!-- row ends -->
           <hr>
           <div class="row">
-            <div class="col-sm-6" style="padding-bottom:50px">
+            <div class="col-sm-6  wow fadeInUp" style="padding-bottom:50px">
               <h1 class="section-title multiple-title">EVENT RULEBOOK</h1>
                   <!-- <p><br>Acoording to our Rule Book - </p> -->
               <p>We provide a platform and you prove it worthwhile.
@@ -232,7 +235,7 @@
                           class="ion-android-download"></i></button>
               </div>
             </div><!-- /.col-sm-6 -->
-            <div class="col-sm-6">
+            <div class="col-sm-6  wow fadeInRight">
               <h1 class="section-title multiple-title"> Registration </h1>
               <p>Be a part of the solution, not pollution. Start your Electric vehicle journey with us,
                 SUVC team is dedicated to provide you best guidance, technical and placement support for a bright career.
@@ -244,10 +247,10 @@
               </div>
             </div>
           </div><!-- /.row -->
-          <div class="row animatedParent" style="padding-top:30px; padding-bottom: 30px; color:black; background-color:rgba(255,193,12, 0.827)">
+          <div class="row" style="padding-top:30px; padding-bottom: 30px; color:black; background-color:rgba(255,193,12, 0.827)">
             <div class="col-sm-4">
-              <div class="style-box-1 center-block animated bounceInDown">
-                <h2 class="section-title multiple-title" align="center">VISION</h2>
+              <div class="style-box-1 center-block wow flipInX">
+                <h2 class="section-title multiple-title">VISION</h2>
                 <hr style="border-color:black; border-width:5px">
                 <p>To bring the focus of the future leaders towards Sustainable development,
                   Cutting edge Technology & Methods to utilize green and clean energy by acting
@@ -256,7 +259,7 @@
               </div>
             </div>
             <div class="col-sm-4" data-sequence='500'>
-              <div class="style-box-1 center-block animated bounceInDown">
+              <div class="style-box-1 center-block  wow flipInX">
                 <h2 class="section-title multiple-title">MISSION</h2>
                 <hr style="border-color:black; border-width:5px">
                 <p>To develop students for industry-fit technocrats driven by providing conducive
@@ -266,7 +269,7 @@
               </div>
             </div>
             <div class="col-sm-4">
-              <div class="style-box-1 center-block animated bounceInDown">
+              <div class="style-box-1 center-block  wow flipInX">
                 <h2 class="section-title multiple-title">GOAL</h2>
                 <hr style="border-color:black; border-width:5px">
                 <p>
@@ -316,13 +319,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="section-title">Our Delegates</h3>
+                    <h3 class="section-title wow bounceInDown">Our Delegates</h3>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-4">
-                    <div class="speaker">
+                    <div class="speaker wow zoomIn">
                         <figure>
                             <img alt="" class="img-responsive center-block speaker-image"
                                 src="assets/images/speakers/1.jpg">
@@ -340,7 +343,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <div class="speaker">
+                    <div class="speaker wow slideInUp">
 
                         <figure>
                             <img alt="" class="img-responsive center-block speaker-image"
@@ -358,7 +361,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <div class="speaker">
+                    <div class="speaker wow zoomIn">
                         <figure>
                             <img alt="" class="img-responsive center-block speaker-image"
                                 src="assets/images/speakers/3.jpg">
@@ -379,7 +382,7 @@
             <div class="row">
                 <div class="col-md-4">
 
-                    <div class="speaker">
+                    <div class="speaker wow slideInUp">
 
                         <figure>
                             <img alt="" class="img-responsive center-block speaker-image"
@@ -400,7 +403,7 @@
                 </div>
                 <div class="col-md-4">
 
-                    <div class="speaker">
+                    <div class="speaker wow zoomIn">
 
                         <figure>
                             <img alt="" class="img-responsive center-block speaker-image"
@@ -422,7 +425,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <div class="speaker">
+                    <div class="speaker wow slideInUp">
                         <figure>
                             <img alt="" class="img-responsive center-block speaker-image"
                                 src="assets/images/speakers/6.jpg">
@@ -445,7 +448,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-4">
-            <div class="style-box-1 center-block">
+            <div class="style-box-1 center-block wow rollIn">
               <h2>SUVC</h2>
               <hr style="border-color:black; border-width:5px">
               <p>Some text or image here Some text or image here Some text or image here Some text or image here Some text or image here
@@ -453,7 +456,7 @@
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="style-box-1 center-block">
+            <div class="style-box-1 center-block wow rollIn">
               <h2>RSTE CLUB</h2>
               <hr style="border-color:black; border-width:5px">
               <p>Some text or image here Some text or image here Some text or image here Some text or image here Some text or image here
@@ -461,7 +464,7 @@
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="style-box-1 center-block">
+            <div class="style-box-1 center-block wow rollIn">
               <h2>SAP</h2>
               <hr style="border-color:black; border-width:5px">
               <p>Some text or image here Some text or image here Some text or image here Some text or image here Some text or image here
@@ -476,38 +479,38 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="section-title" style="text-align:center">SUPPORTED BY</h2>
+                    <h2 class="section-title wow zoomIn" style="text-align:center">SUPPORTED BY</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
-                    <a class="partner-box partner-box-1"></a>
+                    <a class="partner-box partner-box-1 wow zoomIn"></a>
                 </div>
                 <div class="col-sm-4">
-                    <a class="partner-box partner-box-2"></a>
+                    <a class="partner-box partner-box-2 wow zoomIn"></a>
                 </div>
                 <div class="col-sm-4">
-                    <a class="partner-box partner-box-3"></a>
+                    <a class="partner-box partner-box-3 wow zoomIn"></a>
                 </div>
 
                 <!-- below code belongs to "Event Partner" section but merged with "SUPPORTED-BY" -->
                 <div class="row">
                     <div class="col-sm-4">
-                        <a class="partner-box partner-box-5"></a>
+                        <a class="partner-box partner-box-5 wow zoomIn"></a>
                     </div>
                     <div class="col-sm-4">
-                        <a class="partner-box partner-box-6"></a>
+                        <a class="partner-box partner-box-6 wow zoomIn"></a>
                     </div>
                     <div class="col-sm-4">
-                        <a class="partner-box partner-box-4"></a>
+                        <a class="partner-box partner-box-4 wow zoomIn"></a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-4">
-                        <a class="partner-box partner-box-8"></a>
+                        <a class="partner-box partner-box-8 wow zoomIn"></a>
                     </div>
                     <div class="col-sm-4">
-                        <a class="partner-box partner-box-7"></a>
+                        <a class="partner-box partner-box-7 wow zoomIn"></a>
                     </div>
                 </div>
                 <!-- <div class="col-sm-3">
@@ -545,12 +548,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="section-title">Our Clients</h3>
+                    <h3 class="section-title wow flipInX">Our Clients</h3>
                 </div>
             </div>
             <div class="row">
               <div class="col-md-12">
-                  <section class="customer-logos slider">
+                  <section class="customer-logos slider wow fadeInLeft">
                     <div class="slide"><img src="assets/images/clients/aps_eng_clg.PNG"></div>
                     <div class="slide"><img src="assets/images/clients/apsit_mumbai.jpg"></div>
                     <div class="slide"><img src="assets/images/clients/deogiri.PNG"></div>
@@ -659,8 +662,8 @@
             <div class="row">
                 <div class="col-sm-3">
 
-                    <h3 class="section-title">Contact Us</h3>
-                    <address>
+                    <h3 class="section-title wow fadeIn">Contact Us</h3>
+                    <address class="wow slideInLeft">
                         <p>Near Arogyadham Hospital, City Center,<br>
                             Mahalgaon, Gwalior, Madhya Pradesh 474002<br> Phone: +91-9617577301 <br>+91-8770201773<br>
                             Email:
@@ -668,14 +671,14 @@
                     </address>
                 </div>
                 <div class="col-sm-9">
-                    <iframe
+                    <iframe class="wow slideInRight"
                         src="https://maps.google.com/maps?q=HINDUSTHAN%20COLLEGE%20OF%20ENGINEERING%20AND%20TECHNOLOGY%2C%20COIMBATORE%2C%20TAMIL%20NADU&t=&z=13&ie=UTF8&iwloc=&output=embed"
                         width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="row">
                 <div class="row">
-                    <div class="col-sm-12 text-center">
+                    <div class="col-sm-12 text-center wow fadeIn">
                         <h2>Want to join us?</h2>
 
                             <div class="mt20">
@@ -795,16 +798,18 @@
     <script src="assets/js/jquery.counterup.min.js"></script>
     <script src="assets/js/slick.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/wow.min.js"></script>
     <script>
+      new WOW().init();
       jQuery(document).ready(function($) {
           $('.counter').counterUp({
               delay: 10,
               time: 1000
           });
+
       });
     </script>
     <script src="assets/js/carousel.js"></script>
-    <script src="assets/third_party/css3_animateIt/js/css3-animate-it.js"></script>
 
 </body>
 
