--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,73 @@
     <link rel="stylesheet" href="assets/css/style_boxes.css">
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet" href="assets/css/font.css">
+    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css">
 
     <link rel="icon" href="assets/images/suvc.png" type="image/gif" sizes="16x16">
-
+    <style>
+    .testimonial{ margin: 0 20px 50px; }
+.testimonial .testimonial-profile{
+    display: inline-block;
+    position: relative;
+    top: 15px;
+}
+.testimonial .title{
+    display: block;
+    font-size: 20px;
+    font-weight: 600;
+    color: #2f2f2f;
+    text-transform: capitalize;
+    padding: 10px;
+    margin: 0 0 7px 0;
+}
+.testimonial .post{
+    display: block;
+    font-size: 14px;
+    color: #5d7aa7;
+}
+.testimonial .description{
+    padding: 20px 22px;
+    background: rgb(253,193,3);
+    font-size: 15px;
+    color: black;
+    font-weight: 900;
+    line-height: 25px;
+    margin: 0;
+    position: relative;
+}
+.testimonial .description:before,
+.testimonial .description:after{
+    content: "";
+    border-width: 18px 0 0 18px;
+    border-style: solid;
+    border-color: rgb(250,153,3) transparent transparent;
+    position: absolute;
+    bottom: -18px;
+    left: 0;
+}
+.testimonial .description:after{
+    border-width: 18px 18px 0 0;
+    left: auto;
+    right: 0;
+}
+.owl-theme .owl-controls{
+    margin-top: 10px;
+    margin-left: 30px;
+}
+.owl-theme .owl-controls .owl-buttons div{
+    opacity: 0.8;
+    background: #fff;
+}
+.owl-prev:before,
+.owl-next:before{
+    content: "<";
+    font-weight: 900;
+    font-size: 20px;
+    color: #1f487e;
+}
+.owl-next:before{ content: ">"; }
+    </style>
 </head>
 
 <body data-spy="scroll" data-target="#site-nav">
@@ -63,7 +127,7 @@
                     <li><a href="workshop.html">WORKSHOP</a></li>
                     <li><a href="gallery.html">GALLERY</a></li>
                     <!-- <li><a data-scroll href="#">Sponsorship</a></li> -->
-                    <li><a data-scroll href="">CONTACT US</a></li>
+                    <li><a data-scroll href="#location">CONTACT US</a></li>
                     <!--<li><a data-scroll href="#location">REGISTER</a></li>-->
                     <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdRNgfyzP8dU9KZcG2UyAFbkl-8GJ3CwuIsMUByH1f4btgNvw/viewform" target="_blank">REGISTER</a></li>
                     <li>
@@ -209,6 +273,53 @@
             </div>
           </div>
         </div><!-- /.container -->
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="row">
+          <div style="text-align:center"> <h1 class="wow zoomIn"> STUDENTS TESTIMONIALS </h1></div>
+        </div>
+          <div class="row">
+              <div class="col-md-12">
+                  <div id="testimonial-slider" class="owl-carousel">
+                      <div class="testimonial">
+                          <div class="testimonial-profile">
+                              <h3 class="title"><center>Anshuman Pattnaik</center><br>Recommends SAUR URJA VEHICLE CHALLENGE</h3>
+                          </div>
+                          <p class="description">
+                            It's a fresh championship with lots of energy hardwork and dedication involved.
+                            The best thing is - SUVC FAMILY works tirelessly to ensure obsolete troubles to participating teams.
+                            It's like entering into a 5star facility with everything taken care of.
+                            The end result is seamless and all laminar. They understand a beginners problem and they mentor them like their own which
+                            is rare to find in any other events.I personally feel SUVC should be the must enroll championship if you're looking for true spirit.
+                          </p>
+                      </div>
+                      <div class="testimonial">
+                          <div class="testimonial-profile">
+                              <h3 class="title"><center>Ganapathy Mechon</center><br>Recommends SAUR URJA VEHICLE CHALLENGE</h3>
+                          </div>
+                          <p class="description">
+                            I am very happy , to participate in SUVC. Suvc 2020 is the one of the wonderful and very memorable experience to me.
+                            Very comfortable organizing committee, they are very kind and helpful. The bonding between organaizers and our team
+                            its totally unbelievable. Thank you suvc, for making extadionry memories to me.
+                          </p>
+                      </div>
+
+                      <div class="testimonial">
+                          <div class="testimonial-profile">
+                              <h3 class="title"><center>Hitendra Singh</center><br>Recommends SAUR URJA VEHICLE CHALLENGE</h3>
+                          </div>
+                          <p class="description">
+                            A great step towards renewable energy endorsement.
+                          </p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+
     </section>
 
     <section id="facts" class="section bg-image-1 facts text-center">
@@ -496,7 +607,7 @@
                 </div>
             </div>
     </section> -->
-    <section id="partner" class="section partner">
+    <section class="section partner">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -552,8 +663,6 @@
                     <a class="partner-box partner-box-14"></a>
                 </div>
             </div> -->
-            <div class="row">
-            </div>
         </div>
     </section>
 
@@ -616,10 +725,13 @@
 
                     <h3 class="section-title wow fadeIn">Contact Us</h3>
                     <address class="wow slideInLeft">
-                        <p>Near Arogyadham Hospital, City Center,<br>
-                            Mahalgaon, Gwalior, Madhya Pradesh 474002<br> Phone: +91-9617577301 <br>+91-8770201773<br>
-                            Email:
-                            contact@suvcrste.com</p>
+                        <p><b>Mr. Prakhar Agarwal </b></p>
+                        <p>RSTE<br>
+                          348, Sainik Colony,
+                          Pinto Park, Gwalior, <br>
+                          Madhya Pradesh 474005 <br>
+                          Phone: +91-9617577301 <br>+91-8770201773<br>
+                          Email: contact@suvcrste.com</p>
                     </address>
                 </div>
                 <div class="col-sm-9">
@@ -629,21 +741,16 @@
                 </div>
             </div>
             <div class="row">
-                <div class="row">
-                    <div class="col-sm-12 text-center wow fadeIn">
-                        <h2>Want to join us?</h2>
-
-                            <div class="mt20">
-                                <button type="submit" class="btn btn-black"
-                                    onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSdRNgfyzP8dU9KZcG2UyAFbkl-8GJ3CwuIsMUByH1f4btgNvw/viewform')"
-                                    id="registration-submit-btn">Register Now</button>
-                            </div>
-                            <!-- <a class="btn btn-white" href="https://sites.google.com/view/suvc2020/home"
-                                target="_blank">Register Now</a> -->
-
-                    </div>
-                </div>
+              <div class="col-sm-12 text-center wow fadeIn">
+                  <h2>Want to join us?</h2>
+                  <div class="mt20">
+                      <button type="submit" class="btn btn-black"
+                          onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSdRNgfyzP8dU9KZcG2UyAFbkl-8GJ3CwuIsMUByH1f4btgNvw/viewform')"
+                          id="registration-submit-btn">Register Now</button>
+                  </div>
+              </div>
             </div>
+
         </div>
     </section>
     <section id="registration" class="section registration">
@@ -654,7 +761,7 @@
                 </div>
             </div>
 
-            <form action="#" id="registration-form">
+            <form action="assets/php/contact.php" method = 'post' id="registration-form">
                 <div class="row">
                     <div class="col-md-12" id="registration-msg" style="display:none;">
                         <div class="alert"></div>
@@ -717,6 +824,8 @@
         </div>
     </section>
 
+
+
     <footer class="site-footer">
         <div class="container">
             <div class="row">
@@ -751,14 +860,37 @@
     <script src="assets/js/slick.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/wow.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
     <script>
       new WOW().init();
       jQuery(document).ready(function($) {
+          //get url
+
           $('.counter').counterUp({
               delay: 10,
               time: 1000
           });
-
+          $("#testimonial-slider").owlCarousel({
+              items:2,
+              itemsDesktop:[1000,2],
+              itemsDesktopSmall:[979,2],
+              itemsTablet:[768,1],
+              pagination:false,
+              navigation:true,
+              navigationText:["",""],
+              autoPlay:true
+          });
+          $('#quote-carousel').carousel({
+            pause: true,
+            interval: 4000,
+          });
+          if(window.location.hash == "#location")
+          {
+            $('html, body').animate({
+                scrollTop: $('#location').offset().top
+            }, 'slow');
+            window.reload();
+          }
       });
     </script>
     <script src="assets/js/carousel.js"></script>
